--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Deploy project
+name: Deploy project 4 
 on: [push, workflow_dispatch]
 jobs:
   test:
@@ -14,3 +14,19 @@ jobs:
         run: npm ci
       - name: Run tests 
         run: npm test
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - name: Install dependencies
+        run: npm ci
+      - name: Build project
+        run: npm run build
+      - name: Deploy 
+        run: echo "Deploying to server..." # Add your deployment commands here, e.g., rsync, scp, etc
