--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,7 @@
 name: Deploy project 4 
 on: [push, workflow_dispatch]
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -12,9 +12,9 @@ jobs:
           node-version: '18'
       - name: Install dependencies
         run: npm ci
-      - name: Run tests 
-        run: npm lint
-        test:
+      - name: Run lint 
+        run: npm run lint
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
