--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,5 @@
 name: Deploy project 4 
-on: [push, workflow_dispatch]
+on: push
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -28,7 +28,6 @@ jobs:
       - name: Run tests 
         run: npm test
   deploy:
-    needs: [lint, test]
     runs-on: ubuntu-latest
     steps:
       - name: Get code
